Fixed issue in firefox with bullet point bleeding over div

--- a/client/notifications/notifications.scss
+++ b/client/notifications/notifications.scss
@@ -13,6 +13,7 @@
 .notification{
 	margin-top: 5px;
 	font-size: 14px;
+	list-style-position: inside;
 }
 
 .clearNotifications{
